test/files/invalid/invalid_enum_variant.stderr
error: expecting integer literal
  ┌─ test/files/invalid/invalid_enum_variant.fbs:2:7
  │
2 │   X = "hello"
  │       ^^^^^^^

Error: Bailing because of errors
